# nest-mcp

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  converter.ipynb  hello_nest.parquet  nest_mcp.db  todo.md
raw/: codes.csv
src/: auth.rs  duckdb.rs  lib.rs  main.rs  tool.rs
