[package]
name = "nest-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
duck = { package = "duckdb", version = "1.3.2", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = "0.7.15"
axum = "0.8.4"

rmcp = { version = "0.3.0", features = ["server", "transport-sse-server"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
schemars = { version = "1.0.4", features = ["derive"] }
